--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -1,28 +1,4 @@
 @font-face {
-  font-family: 'Rubik';
-  src: url("../fonts/Rubik-Regular.woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url("../fonts/Lato-Bold.woff2");
-  font-weight: 700;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url("../fonts/Lato-Black.woff2");
-  font-weight: 900;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url("../fonts/Lato-Regular.woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
   font-family: 'Nunito';
   src: url("../fonts/Nunito-Regular.woff2");
   font-weight: 400;
@@ -60,9 +36,8 @@
   font-style: normal;
 }
 
-
 body{
-  font-family: "Lato";
+  font-family: young;
   display: flex;
 align-items: center;
 flex-direction: column;
@@ -225,11 +200,7 @@ font-family: 'young';
   right: 0;
   fill: #4F516370;
 }
-.side-nav h2{
-  font-size: 1.2em;
-  font-family: 'lato';
-  color: #31323E;
-}
+
 .side-nav a {
   margin: .5rem 0;
   display: flex;
