--- a/assets/css/categorised-calculators-list.css
+++ b/assets/css/categorised-calculators-list.css
@@ -1,28 +1,4 @@
 @font-face {
-  font-family: 'Rubik';
-  src: url("../fonts/Rubik-Regular.woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url("../fonts/Lato-Bold.woff2");
-  font-weight: 700;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url("../fonts/Lato-Black.woff2");
-  font-weight: 900;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url("../fonts/Lato-Regular.woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
   font-family: 'Nunito';
   src: url("../fonts/Nunito-Regular.woff2");
   font-weight: 400;
@@ -53,7 +29,7 @@
   font-style: normal;
 }
 body{
-  font-family: "Lato";
+  font-family: young;
   display: flex;
 align-items: center;
 flex-direction: column;
@@ -219,7 +195,7 @@ font-family: 'Young';
 }
 .side-nav h2{
   font-size: 1.2em;
-  font-family: 'lato';
+  font-family: young;
   color: #31323E;
 }
 .side-nav a {
