--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,28 +1,4 @@
 @font-face {
-  font-family: 'Rubik';
-  src: url("../fonts/Rubik-Regular.woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url("../fonts/Lato-Bold.woff2");
-  font-weight: 700;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url("../fonts/Lato-Black.woff2");
-  font-weight: 900;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url("../fonts/Lato-Regular.woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
   font-family: 'Nunito';
   src: url("../fonts/Nunito-Regular.woff2");
   font-weight: 400;
@@ -53,7 +29,7 @@
   font-style: normal;
 }
 body{
-  font-family: "Lato";
+  font-family: young;
   display: flex;
 align-items: center;
 flex-direction: column;
@@ -336,7 +312,6 @@ text-decoration: none;
   transform: translateY(-5px);
 }
 .lists-of-calcs h1{
-  font-family: lato;
   font-weight: 400;
   margin-bottom: 5px;
   font-size: 1em;
