--- a/assets/css/pwa-start-page.css
+++ b/assets/css/pwa-start-page.css
@@ -1,28 +1,4 @@
 @font-face {
-  font-family: 'Rubik';
-  src: url("../fonts/Rubik-Regular.woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url("../fonts/Lato-Bold.woff2");
-  font-weight: 700;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url("../fonts/Lato-Black.woff2");
-  font-weight: 900;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url("../fonts/Lato-Regular.woff2");
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
   font-family: 'Nunito';
   src: url("../fonts/Nunito-Regular.woff2");
   font-weight: 400;
@@ -35,7 +11,7 @@
   font-style: normal;
 }
 body{
-  font-family: "Lato";
+  font-family: young;
   display: flex;
 align-items: center;
 justify-content: center;
@@ -298,12 +274,6 @@ text-decoration: none;
 }
 .lists-of-calcs:hover{
   transform: translateY(-5px);
-}
-.lists-of-calcs h1{
-  font-family: lato;
-  font-weight: 900;
-  margin-bottom: 5px;
-  font-size: 1.2em;
 }
 .lists-of-calcs a{
   font-family: young;
