--- a/assets/css/a-t-p.css
+++ b/assets/css/a-t-p.css
@@ -1,4 +1,16 @@
 @font-face {
+  font-family: 'Young';
+  src: url("/assets/fonts/young.woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Nunito';
+  src: url("../fonts/Nunito-Regular.woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
   font-family: 'lexend';
   src: url("/assets/fonts/Lexend-SemiBold.woff2");
   font-weight: 400;
@@ -16,9 +28,8 @@
   font-weight: 900;
   font-style: normal;
 }
-
 body{
-  font-family: "young";
+  font-family: young;
   display: flex;
 align-items: center;
 flex-direction: column;
