--- a/assets/css/categorised-calculators-list.css
+++ b/assets/css/categorised-calculators-list.css
@@ -350,16 +350,80 @@ footer{
 flex-direction: column;
 align-items: center;
 justify-content: center;
-margin-top: 3em;
 gap: 1em;
-font-family: "nunito";
+margin-top: 3em;
+font-family: "Nunito";
+background: #fff;
+margin-bottom: -10px;
+box-shadow: rgba(0, 0, 0, 0.06) 0 18px 10px;
 }
 footer .quick-links{
   display: flex;
+  padding: 12px;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+}
+.calculator-categories-footer{
+  display: grid; grid-template-columns: repeat(2, 1fr);
+  padding: 10px;
+  gap: .5em;
+  font-family: "young";
+}
+.calculator-categories-footer a{
+transition: .14s;
+display: flex;
+align-items: center;
+justify-content: flex-start;
+font-size: .9em;
+cursor: help;
+gap: 18px; 
+text-decoration: none;
+color: #4A4B5D;
+padding: 8px 12px;
+letter-spacing: .4px;
+}
+.calculator-categories-footer a:hover{
+  color: #3135CD;
+}
+.calculator-categories-footer a svg{
+  flex-shrink: 0;
+width: 17px;
+height: 17px;
+fill: #3135CD;
+}
+.quick-links-social{
+  display: flex;
 align-items: center;
 justify-content: center;
-gap: 1em;
+  flex-direction: row;
+  gap: 1.4em;
+  border-bottom: 1px solid #ADB0C740;
+  width: 100%;
+  padding: 8px;
+ padding-bottom: 25px;
 }
+.quick-links-social a{
+cursor: help;
+color: #4E5065FA;
+transition: .2s;
+font-weight: 600;
+border-radius: 12px;
+background: #4E5065FA;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+.quick-links-social a:active {
+  transform: translateY(-4px);
+}
+.quick-links-social a svg{
+  height: 14px;
+  width: 14px;
+  fill: #fff;
+  padding: 7px;
+}
+
 footer .quick-links a{
   text-decoration: none;
   cursor: help;
@@ -370,6 +434,11 @@ footer .quick-links a{
 footer .quick-links a:hover{
   color: #434559;
 }
+footer h2{
+  font-family: lexend;
+  font-size: 1em;
+  margin-bottom: -10px;
+}
 footer span{
   display: flex;
 align-items: center;
@@ -377,13 +446,24 @@ justify-content: center;
 font-size: .95em;
 color: #6B6E8FDB;
 gap: .3em;
+padding: 10px;
+margin-top: -10px;
 }
 footer span svg{
   fill: red;
-  width: 1.2em;
+  width: 1.15em;
 }
+
 @media (min-width: 900px) {
   .side-nav {
     width: 350px;
   }
+  .calculator-categories-footer{
+  display: grid; grid-template-columns: repeat(3, 1fr);
+  padding: 10px;
+  
+}
+.calculator-categories-footer a{
+  margin-right: 5em;
+}
 }
