--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -254,6 +254,11 @@ display: block;
   align-items: flex-start;
   justify-content: flex-start;
 }
+.last-updated-text{
+  font-size: .85em;
+color: #42445ACC;
+margin-bottom: .5em;
+}
 .hero-sec{
   max-width: 550px;
 }
