--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -679,10 +679,10 @@ select:focus{
 outline: 3px solid #464BFF14;
 }
 input[type="date"]{
-background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30.727 30.727' xml:space='preserve'><path fill='%23464BFF' d='M29.994 10.183 15.363 24.812.733 10.184a2.5 2.5 0 1 1 3.536-3.536l11.095 11.093L26.461 6.647a2.5 2.5 0 1 1 3.533 3.536'/></svg>");
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='24px' viewBox='0 -960 960 960' width='24px' fill='%23464BFF'%3E%3Cpath d='M320-400q-17 0-28.5-11.5T280-440q0-17 11.5-28.5T320-480q17 0 28.5 11.5T360-440q0 17-11.5 28.5T320-400Zm160 0q-17 0-28.5-11.5T440-440q0-17 11.5-28.5T480-480q17 0 28.5 11.5T520-440q0 17-11.5 28.5T480-400Zm160 0q-17 0-28.5-11.5T600-440q0-17 11.5-28.5T640-480q17 0 28.5 11.5T680-440q0 17-11.5 28.5T640-400ZM200-80q-33 0-56.5-23.5T120-160v-560q0-33 23.5-56.5T200-800h40v-80h80v80h320v-80h80v80h40q33 0 56.5 23.5T840-720v560q0 33-23.5 56.5T760-80H200Zm0-80h560v-400H200v400Zm0-480h560v-80H200v80Zm0 0v-80 80Z'/%3E%3C/svg%3E");
 background-repeat: no-repeat;
 background-position: right 10px center;
-background-size: 15px 15px;
+background-size: 20px 20px;
 }
 .input-select-wrap{
   display: flex;
@@ -1425,7 +1425,17 @@ font-weight: 400;
 font-size: .9em;
 line-height: 1.7;
   }
-  
+   .description-txt ul{
+     color: #515353;
+font-size: .9em;
+line-height: 1.7;
+display: flex;
+flex-direction: column;
+gap: .3em;
+   }
+   .description-txt strong{
+     font-family: lexend;
+   }
   /*****************************
   ad blockers 
   *******************************/
