--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -1425,14 +1425,22 @@ font-weight: 400;
 font-size: .9em;
 line-height: 1.7;
   }
-   .description-txt ul{
-     color: #515353;
-font-size: .9em;
-line-height: 1.7;
-display: flex;
-flex-direction: column;
-gap: .3em;
-   }
+   .description-txt ul {
+  color: #515353;
+  font-size: .9em;
+  line-height: 1.7;
+  display: flex;
+  flex-direction: column;
+  gap: .3em;
+}
+.description-txt ol {
+  color: #515353;
+  font-size: .9em;
+  line-height: 1.7;
+  display: flex;
+  flex-direction: column;
+  gap: .3em;
+}
    .description-txt strong{
      font-family: lexend;
    }
