--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -1445,7 +1445,7 @@ font-weight: 400;
   .description-txt p{
     color: #515353;
 font-size: .9em;
-line-height: 1.7;
+line-height: 1.72;
   }
    .description-txt ul {
   color: #515353;
@@ -1454,6 +1454,7 @@ line-height: 1.7;
   display: flex;
   flex-direction: column;
   gap: .2.5em;
+  margin-top: -1em;
 }
 ul li::marker {
   color: red;
