--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -540,10 +540,7 @@ padding: 5px;
   padding-right: 23px;
   padding-left: 3px;
 }
-.input-group-main-wrap-two .input-group input {
-  
-  
-}
+
 .input-group {
   margin-bottom: 1.5em;
   position: relative;
@@ -625,7 +622,7 @@ margin-bottom: 15px;
             transition: .25s;
             font-family: "OfficeCode";
             background: #fff;
-          height: 20px;
+         /* height: 20px;*/
         }
         .input-group input::placeholder{
           font-size: 16px;
@@ -669,11 +666,10 @@ font-size: .95em;
 user-select: none;
 letter-spacing: .5px;
 outline: none;
-font-style: young;
 color: #42445AED;
   transition: .1s;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30.727 30.727' xml:space='preserve'><path fill='%23464BFF' d='M29.994 10.183 15.363 24.812.733 10.184a2.5 2.5 0 1 1 3.536-3.536l11.095 11.093L26.461 6.647a2.5 2.5 0 1 1 3.533 3.536'/></svg>");
-  margin-bottom: .5em;
+  margin-bottom: .4em;
   background-repeat: no-repeat;
   background-position: right 10px center;
   background-size: 15px 15px;
@@ -690,8 +686,39 @@ background-size: 20px 20px;
 }
 .input-select-wrap{
   display: flex;
-  gap: 8px;
+  /*gap: 8px;*/
   width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.input-select-wrap input,.input-select-wrap select{
+  
+}
+.input-select-wrap input {
+  border-radius: 10px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.input-select-wrap select{
+  border-radius: 10px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  flex-basis: 30%;
+/*box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;*/
+/*border: 1.5px solid #464BFF;*/
+/*border-left: 0;*/
+background-color: #464BFF05;
+/* height: 50px;*/
+padding: 13px;
+transition: .2s;
+
+border-left: none;
+}
+.input-select-wrap select:focus{
+  border-left: none;
+  background-color: #464BFF17;
+  border: 1.5px solid #464BFF3D;
+outline: none;
 }
 .row-input-wrap{
   display: flex;
@@ -1013,11 +1040,6 @@ outline: none;
   font-weight: bold;
   color: #43434F;
   padding: .2em;
-}
-.input-select-wrap select{
-  flex-basis: 30%;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
-  border: 1.5px solid #464BFF;
 }
 input[type="date"]{
   appearance: none;
@@ -1710,22 +1732,18 @@ footer span svg{
   .side-nav{
     width: 350px;
   }
-  .sec-one{
-    /*margin-left: 10em;*/
-  }
  .container{
    background: #fff;
 border-radius: 20px;
 border: 1px solid #42445A1C;
 padding: 12px;
-margin-bottom: 1em;
 padding-top: 2em;
 margin-left: 6em
  }
  .last-updated-text{
    padding: 15px;
  }
- .description-txt,.hero-sec,.quick-actions-btn,.last-updated-text,.similar-calculators-wrap{
+ .description-txt,.hero-sec,.quick-actions-btn,.last-updated-text,.similar-calculators-wrap,.ng-cgpa-container{
    margin-left: 6em;
  }
  .quick-actions-btn button{
