--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -348,7 +348,7 @@ transition: .3s;
 .result:focus{
   color: #000!important;
 }
-.result.flashResult{
+input.flashResult{
   color: #000;
   transition: color 0.4s ease;
 }
