--- a/assets/css/categorised-calculators-list.css
+++ b/assets/css/categorised-calculators-list.css
@@ -437,9 +437,27 @@ fill: #fff;
   gap: 1.2em;
 }
 .calculators-lists h2{
-  font-size: 1.3em;
+  font-size: 1.4em;
   font-family: lexend;
   font-weight: 400;
+}
+.calculators-lists ul{
+color: #515353;
+  font-size: 1em;
+  line-height: 1.72;
+  display: flex;
+  flex-direction: column;
+  gap: .8em;
+  margin: 0;
+  padding: 24px;
+  margin-top: -2em;
+}
+.calculators-lists ul li{
+  
+}
+.calculators-lists ul li::marker {
+  font-size: 1.4em;
+  color: #464BFF73;
 }
 .calculators-lists a{
 cursor: none;
