--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -461,7 +461,7 @@ box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 4px;
     border: none!important;
   }
 .expanded-input-option-svg {
-  transition: transform 0.3s ease;
+  transition: transform .2s ease;
 }
 
 .expanded-input-option-svg.rotated {
@@ -480,7 +480,6 @@ background: #464BFF29;
   flex-direction: column;
   border-radius: 8px;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  
   opacity: 0;
   transform: scale(0.95);
   transition: opacity .1s ease, transform .1s ease;
@@ -542,7 +541,7 @@ letter-spacing: .3px;
       fill: #55606c;
       padding: 0px;
       border-radius: 8px;
-      transition: .3s;
+      transition: .2s;
       height: 20px;
       position: absolute;
       right: 0;
@@ -686,12 +685,13 @@ select {
   border: 1.5px solid #464BFF3D;
   border-radius: 6px;
   padding: 13px;
-  font-family: young;
+  font-family: AlanSans;
+  font-weight: bold;
 font-size: .95em;
 user-select: none;
 letter-spacing: .5px;
 outline: none;
-color: #42445AED;
+color: #000;
   transition: .1s;
   background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30.727 30.727' xml:space='preserve'><path fill='%23464BFF' d='M29.994 10.183 15.363 24.812.733 10.184a2.5 2.5 0 1 1 3.536-3.536l11.095 11.093L26.461 6.647a2.5 2.5 0 1 1 3.533 3.536'/></svg>");
   margin-bottom: .4em;
