--- a/assets/css/calculators-styles-global.css
+++ b/assets/css/calculators-styles-global.css
@@ -2055,6 +2055,60 @@ font-family: young;
 #decline-cookieBtn:hover{
   background: #484A582E;
 }
+.adsterra-anchor-fixed {
+  position: fixed;
+  top: 60px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  background: #fff;
+  box-shadow: 0 2px 20px #464BFF14, 0 1px 15px #464BFF14;
+  z-index: 999;
+}
+  /********* Adsterra ***********/
+.adsterra-anchor-fixed {
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+padding-top: 4em;
+text-align: center;
+background: #fff;
+padding-bottom: 5px;
+z-index: 999;
+
+}
+.adsterra-anchor-fixed iframe {
+margin: auto;
+display: block;
+border-radius: 13px;
+padding: 4px;
+background: #fff;
+}
+.adsterra-anchor {
+position: fixed;
+bottom: 0;
+left: 0;
+width: 100%;
+text-align: center;
+background: #fff;
+box-shadow: 0 2px 20px #464BFF14, 0 1px 15px #464BFF14;
+border-top-right-radius: 12px;
+border-top-left-radius: 12px;
+}
+.adsterra-anchor iframe {
+margin: auto;
+display: block;
+border-radius: 13px;
+padding: 8px;
+}
+/********* Adsterra ***********/
+.adsterra-anchor-fixed iframe {
+  margin: auto;
+  display: block;
+  border-radius: 13px;
+  padding: 8px;
+}
 /****************************/
 footer{
   width: 100%;
